Fix IE10 layout issues by explicitly declaring default flex values on items
Default flex values for flex items changed after IE10:

https://github.com/philipwalton/flexbugs#6-the-default-flex-value-has-ch
anged

https://github.com/clearleft/clearfractal/issues/103

--- a/assets/sass/components/trio.scss
+++ b/assets/sass/components/trio.scss
@@ -87,6 +87,7 @@
         margin-top: px2rem(32px);
     }
     .Trio-item {
+        flex: 0 1 auto;
         width: 33.3%;
         padding: px2rem(28px);
     }
@@ -110,17 +111,22 @@
             margin-left: px2rem(16px);
         }
         .Trio-item {
-            display: flex;
-            align-items: center;
             width: 90%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
             margin-top: 0;
             max-width: px2rem(700px);
+        }
+        .Trio-item--rebel {
+            margin-left: px2rem(80px);
         }
         .Trio-image {
             margin-right: px2rem(24px);
         }
-        .Trio-item--rebel {
-            margin-left: px2rem(80px);
+        .Trio-description {
+            flex: 0 1 auto;
+            max-width: 100%;
         }
     }
 }
